# mouse-brain-cell-segmentation

./: DATA.md  MODEL_CARD.md  Makefile  PAPER_SPEC.md  README.md  RESULTS.md  pyproject.toml
reports/: SOURCE_RUN.txt
reports/latest/: config.yaml  data_manifest.json  environment.json  metrics.json  predictions.parquet  statistical_tests.json  synthetic_coco.json
src/cellseg/: artifacts.py  core.py  run.py
tests/: test_core.py
